# pycorrana

./: .gitignore  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  FRAMEWORK_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: git-release.yml  python-publish.yml
docs/: Makefile  api.rst  changelog.rst  cli.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
examples/: basic_usage.py
src/pycorrana/: __init__.py  datasets.py
src/pycorrana/cli/: __init__.py  interactive.py  main_cli.py
src/pycorrana/core/: __init__.py  analyzer.py  cca.py  nonlinear.py  partial_corr.py  reporter.py  visualizer.py
src/pycorrana/utils/: __init__.py  data_utils.py  large_data.py  stats_utils.py
tests/: confidence_interval_test.py  nonlinear_confidence_test.py  smoke_test.py  test_analyzer.py  test_cca.py  test_smoke.py
